
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u8 ;
typedef int u32 ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int server ;


 int exit (int ) ;
 scalar_t__ getsockname (int,struct sockaddr*,int*) ;
 int htonl (int ) ;
 int htons (int ) ;
 char* inet_ntoa (TYPE_1__) ;
 int printf (char*) ;
 int snprintf (int *,int,char*,char*,int) ;

u32 retrieve_local_info(int sock, u8 *host)
{
   struct sockaddr_in server;
   int soclen;
   soclen = sizeof(server);
   if (getsockname(sock, (struct sockaddr *)&server, &soclen)<0)
       {
       printf("error in getsockname\n");
       exit(0);
       }
   snprintf(host, 256, "%s:%d", inet_ntoa(server.sin_addr), htons(server.sin_port));
   return htonl(server.sin_addr.s_addr);
}
